--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-11-15  Chris Toshok  <toshok@ximian.com>
+
+	* frontends/command-line/Main.cs: remove some unused using
+	directives.
+
 2004-11-12  Chris Toshok  <toshok@ximian.com>
 
 	* wrapper/wrapper.c (main_thread_handler): fix build.
