--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-11-21  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ITargetStructObject.cs (ITargetStructObject.Type):
+	Fix compiler warning; the `new' modifier is required here.
+
+	* interfaces/ITargetClassObject.cs: Likewise.
+	* interfaces/ITargetPointerObject.cs: Likewise.
+	* interfaces/ITargetStructType.cs: Likewise.
+
 2004-11-18  Chris Toshok  <toshok@ximian.com>
 
 	* backends/mono-csharp/MonoFundamentalType.cs
