2004-12-08  Chris Toshok  <toshok@ximian.com>
        * Makefile.am (SUBDIRS): frontends -> frontend.


svn path=/trunk/debugger/; revision=37453

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-12-08  Chris Toshok  <toshok@ximian.com>
 
+	* Makefile.am (SUBDIRS): frontends -> frontend.
+
+2004-12-08  Chris Toshok  <toshok@ximian.com>
+
 	* configure.in (AC_OUTPUT): remove the frontends/* subdirs.  we
 	just build frontend/ now.
 
