--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-11  Martin Baulig  <martin@ximian.com>
+
+	* backends/ThreadManager.cs (ThreadManager.HandleChildEvent): Set
+	`abort_requested' if the child exited.
+
 2004-12-09  Miguel de Icaza  <miguel@ximian.com>
 
 	* glue/mono-debugger-readline.c
