--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-12-15  Chris Toshok  <toshok@ximian.com>
+
+	* glue/mono-debugger-readline.c: drop the #include of
+	mono/metadata/debug-helpers.h.
+	(mono_debugger_readline_set_completion_matches): set
+	rl_attempted_completion_over to 1 here so we don't fall back to
+	filename completion automatically (that's handled by the Command
+	completers.)
+
+	* glue/mono-debugger-readline.h: drop the #include of
+	mono/jit/jit.h.
+
 2004-12-14  Chris Toshok  <toshok@ximian.com>
 
 	* configure.in: simplify the readline stuff - we force the dep on
